--- a/kite-base/pom.xml
+++ b/kite-base/pom.xml
@@ -32,14 +32,16 @@
 	<build>
 
 		<plugins>
-
-			<!-- Jetty Runner for Heroku Helps executing with command: java $JAVA_OPTS 
-				"-jar target/dependency/jetty-runner.jar /-/-port $PORT target/*.war" -->
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.4</version>
+				<inherited>true</inherited>
 				<executions>
+
+					<!-- Jetty Runner for Heroku Helps executing with command: java $JAVA_OPTS 
+						"-jar target/dependency/jetty-runner.jar /-/-port $PORT target/*.war" -->
 					<execution>
 						<phase>package</phase>
 						<goals>
@@ -56,19 +58,11 @@
 							</artifactItems>
 						</configuration>
 					</execution>
-				</executions>
-			</plugin>
 
-			<!-- extract dependencies -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.4</version>
-				<inherited>true</inherited>
-				<executions>
+					<!-- extract dependencies -->
 					<execution>
 						<id>unpack-dependencies</id>
-						<phase>install</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>unpack</goal>
 						</goals>
@@ -81,6 +75,7 @@
 									<classifier>static</classifier>
 									<type>zip</type>
 									<version>${kiteFrameworkVersion}</version>
+									<outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/</outputDirectory>
 								</artifactItem>
 								<artifactItem>
 									<groupId>tr.com.lucidcode</groupId>
@@ -88,6 +83,7 @@
 									<classifier>dynamic</classifier>
 									<type>zip</type>
 									<version>${kiteFrameworkVersion}</version>
+									<outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/</outputDirectory>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
@@ -118,7 +114,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
@@ -155,15 +151,15 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
+
 		<resources>
 			<resource>
 				<directory>src/main/webapp</directory>
-				<targetPath>${project.build.directory}/work</targetPath>
+				<targetPath>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/</targetPath>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
-				<targetPath>${project.build.directory}/work</targetPath>
+				<targetPath>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/</targetPath>
 			</resource>
 		</resources>
 	</build>
