--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,70 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<groupId>tr.com.lucidcode</groupId>
 	<artifactId>kite-base</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
 	<name>Kite Framework Base</name>
+	<description>Parent project for Kite Framework Project Modules</description>
+	<url>http://www.lucidcode.com.tr</url>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/LucidCodeTr/kite-base.git</url>
+		<connection>scm:git:https://github.com/LucidCodeTr/kite-base.git</connection>
+		<developerConnection>scm:git:https://github.com/LucidCodeTr/kite-base.git</developerConnection>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>omerg</id>
+			<name>Omer Gurarslan</name>
+			<email>omerg@lucidcode.com.tr</email>
+			<url>http://www.lucidcode.com.tr/#!about/cgvz</url>
+			<organization>LucidCode</organization>
+			<organizationUrl>http://www.lucidcode.com.tr</organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>+2</timezone>
+			<properties>
+				<picUrl>http://tinyurl.com/pltz7ss</picUrl>
+			</properties>
+		</developer>
+		<developer>
+			<id>alpera</id>
+			<name>Alper Arabaci</name>
+			<email>alper.arabaci@lucidcode.com.tr</email>
+			<url>http://www.lucidcode.com.tr/#!about/cgvz</url>
+			<organization>LucidCode</organization>
+			<organizationUrl>http://www.lucidcode.com.tr</organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>+2</timezone>
+			<properties>
+			</properties>
+		</developer>
+	</developers>
 
 	<properties>
 
@@ -32,7 +91,7 @@
 	<build>
 
 		<plugins>
-		
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
