--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 	<properties>
 
 		<!-- Versions -->
-		<kiteFrameworkVersion>1.0.4</kiteFrameworkVersion>
+		<kiteFrameworkVersion>1.0.5</kiteFrameworkVersion>
 		<jettyPluginVersion>6.1.10</jettyPluginVersion>
 
 		<!-- Encoding -->
@@ -77,15 +77,14 @@
 
 	</properties>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>tr.com.lucidcode</groupId>
-				<artifactId>kite-framework</artifactId>
-				<version>${kiteFrameworkVersion}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>tr.com.lucidcode</groupId>
+			<artifactId>kite-framework</artifactId>
+			<version>${kiteFrameworkVersion}</version>
+			<scope>import</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 
@@ -98,8 +97,7 @@
 				<inherited>true</inherited>
 				<executions>
 
-					<!-- Jetty Runner for Heroku Helps executing with command: java $JAVA_OPTS 
-						"-jar target/dependency/jetty-runner.jar /-/-port $PORT target/*.war" -->
+					<!-- Jetty Runner for Heroku Helps executing with command: java $JAVA_OPTS "-jar target/dependency/jetty-runner.jar /-/-port $PORT target/*.war" -->
 					<execution>
 						<phase>package</phase>
 						<goals>
@@ -175,8 +173,7 @@
 
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
