[maven-release-plugin] prepare release kite-base-1.0.4

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>tr.com.lucidcode</groupId>
 	<artifactId>kite-base</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>1.0.4</version>
 	<packaging>pom</packaging>
 
 	<name>Kite Framework Base</name>
